--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -9,7 +9,7 @@ typeMismatch.birthDate=invalid date
 search.incorrectTitle=wrong title
 login.user=User
 login.password=Password
-search.author=Author 1
+search.author=Author
 search.title=Title
 search.books=Books
 search.info=Additional Info
