--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -1,4 +1,3 @@
-welcome=Welcome
 required=is required
 notFound=has not been found
 duplicate=is already in use
@@ -7,12 +6,22 @@ duplicateFormSubmission=Duplicate form submission is not allowed
 typeMismatch.date=invalid date
 typeMismatch.birthDate=invalid date
 search.incorrectTitle=wrong title
-login.user=User
-login.password=Password
 search.author=Author
 search.title=Title
 search.books=Books
 search.info=Additional Info
+
 AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or password
 PasswordComparisonAuthenticator.badCredentials=Invalid password
 BindAuthenticator.badCredentials=Invalid credentials
+welcome=Welcome
+login.user=User
+login.password=Password
+nav.home=Home
+nav.statistics=Statistics
+nav.displays=Displays
+nav.opinions=Opinions
+nav.localization=Localizations
+nav.messages=Messages
+nav.account=My account
+nav.logout=Logout
