Zaimportowane logowanie od Filipa

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -15,8 +15,11 @@ AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or pas
 PasswordComparisonAuthenticator.badCredentials=Invalid password
 BindAuthenticator.badCredentials=Invalid credentials
 welcome=Welcome
-login.user=User
+login.message=Please login
+login.username=User
 login.password=Password
+login.lostpassword=Did you forgot your password?
+login.error=Your login attempt was not successful, try again.<br />
 nav.home=Home
 nav.statistics=Statistics
 nav.displays=Displays
