Dodane logowanie do twittera, autoryzacja jest zwacana, ale coś nie działa po stronie bazy.

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -18,6 +18,7 @@ welcome=Welcome
 login.message=Please login
 login.username=User
 login.password=Password
+login.submit=Log in
 login.lostpassword=Did you forgot your password?
 login.error=Your login attempt was not successful, try again.<br />
 nav.home=Home
