Little changes in user interface. Build.xml without database dropdown

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -29,4 +29,8 @@ nav.localization=Localizations
 nav.messages=Messages
 nav.account=My account
 nav.logout=Logout
+nav.connect=Social Connections
 acc.title=My account
+twitter.auth=Connect our application to your twitter account
+twitter.pinInput=Enter pin
+twitter.connect=Connect
