PLEASE DO NOT CREATE LINKS HERE. Campaign and CampaignSteps preview.

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -15,18 +15,22 @@ AbstractUserDetailsAuthenticationProvider.badCredentials=Invalid username or pas
 PasswordComparisonAuthenticator.badCredentials=Invalid password
 BindAuthenticator.badCredentials=Invalid credentials
 welcome=Welcome
-login.message=Please login
+login.message=Logging to system
 login.username=User
 login.password=Password
 login.submit=Log in
 login.lostpassword=Did you forgot your password?
-login.error=Your login attempt was not successful, try again.<br />
 nav.home=Home
 nav.statistics=Statistics
 nav.displays=Displays
 nav.opinions=Opinions
 nav.localization=Localizations
+nav.campaigns=Campaigns
+nav.preview=Preview
+nav.addCampaign=Add campaign
+nav.addSteps=Add steps
 nav.messages=Messages
+nav.gallery=Gallery
 nav.account=My account
 nav.logout=Logout
 nav.connect=Social Connections
