Few changes for messages. Still not complete

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -38,3 +38,7 @@ acc.title=My account
 twitter.auth=Connect our application to your twitter account
 twitter.pinInput=Enter pin
 twitter.connect=Connect
+message.futureDate=Date must be greater than campaign step start and current time
+message.pastDate=Date must be lower than campaign step end
+message.twitterError=Problem with sending message to twitter. Please contact with administrator
+message.null=Please select campaign and campaign step!
