Changes in messages

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -38,9 +38,47 @@ acc.title=My account
 twitter.auth=Connect our application to your twitter account
 twitter.pinInput=Enter pin
 twitter.connect=Connect
+
 message.futureDate=Date must be greater than campaign step start and current time
 message.pastDate=Date must be lower than campaign step end
 message.twitterError=Problem with sending message to twitter. Please contact with administrator
 message.null=Please select campaign and campaign step!
 message.futureCamp=Date must be greater than campaign step start and current time
 message.pastCamp=Date must be lower than campaign step end
+message.add=Add new message
+
+stat.favorites=Favorites statistics
+stat.retweets=Retweets statistics
+stat.tweets=Tweets statistics
+
+ment.comments=Comments over time
+ment.positive=Positive comments
+ment.negative=Negative comments
+ment.ratio=Comments ratio
+ment.source=Source:
+ment.date=Date:
+ment.rating=Rating:
+ment.favorites=Favorites:
+
+camp.add=Add new campaign
+camp.step.add=Add new campaign step
+
+camp.preview=All campaigns
+camp.tab.name=Campaign name
+camp.tab.hashtag=Hashtag
+camp.tab.desc=Description
+camp.tab.tw=Twitter
+camp.tab.fb=Facebook
+camp.tab.creation=Creation date
+camp.tab.start=Start date
+camp.tab.end=End date
+camp.tab.gallery=Gallery
+camp.tab.steps=Number of steps
+camp.tab.addsteps=Add steps
+camp.tab.editcampaign=Edit campaign
+camp.tab.deletecampaign=Delete campaign
+camp.tab.edit=Edit
+camp.tab.delete=Delete
+
+social.conn=Please connect your account.
+social.is.connected=Your account is connected already.
