--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -44,3 +44,48 @@ message.twitterError=Problem with sending message to twitter. Please contact wit
 message.null=Please select campaign and campaign step!
 message.futureCamp=Date must be greater than campaign step start and current time
 message.pastCamp=Date must be lower than campaign step end
+message.add=Message has been added!
+message.stepadd=Step has been added!
+message.wrongdates=Campaign has not been added! Wrong dates!
+message.wrongname=Campaign has not been added! Wrong name!
+message.stepwrongdates=Step has not been added! Wrong dates!
+message.updated=Campaign has been updated!
+message.notupdated=Campaign has not been updated! Campaign is not active!
+message.stepnotupdated=Step has not been updated! Wrong dates!
+message.addnext=Add next message
+name.campaign=Campaign
+name.step=Step
+name.date=Date
+name.content=Content
+name.send=Send
+name.add=Add
+name.tag=Tag
+name.description=Description
+name.twitter=Twitter
+name.facebook=Facebook
+name.createdon=Created on
+name.startdate=Start date
+name.enddate=End date
+name.addsteps=Add steps
+name.gallery=Gallery
+name.stepnumber=Steps
+name.edit=Edit
+name.deletecampaign=Delete
+name.addnewcampaign=Add new campaign
+name.campaignname=Campaign name
+name.addstep=Add step
+name.newcampaign=New Campaign
+name.newstep=New Step
+name.stepname=Step name
+name.stepdescription=Step description
+name.addstep=Add step
+name.campaignedit=Campaign edit
+name.campstepsfor=Campaign steps for
+name.order=Order
+name.showcontent=Show content
+name.editstep=Edit step
+name.deletestep=Delete step
+name.campaignreturn=Return to campaigns
+name.messages=Messages
+name.addmessage=Add new message
+name.return=Return
