Changes in design.

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -19,7 +19,7 @@ login.message=Logging to system
 login.username=User
 login.password=Password
 login.submit=Log in
-login.lostpassword=Did you forgot your password?
+login.lostpassword=Sign in
 nav.home=Home
 nav.statistics=Statistics
 nav.displays=Displays
