Micro fix + changed mentions values

--- a/Rest/src/mymessages_en.properties
+++ b/Rest/src/mymessages_en.properties
@@ -83,6 +83,7 @@ social.conn=Please connect your account.
 social.is.connected=Your account is connected already.
 
 message.add=Message has been added!
+message.campaignadd=Campaign has been created!
 message.stepadd=Step has been added!
 message.wrongdates=Campaign has not been added! Wrong dates!
 message.wrongname=Campaign has not been added! Wrong name!
